--- a/src/main/frontend/src/App.css
+++ b/src/main/frontend/src/App.css
@@ -1,3 +1,11 @@
-.App{
-  
+.header {
+    position: static;
+    height: 80px;
+    width: 100%;
+}
+.footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 150px
 }
